2 files modified, 2 added, 2 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
           <a [routerLink]="['/users']">Users</a>
         </li>
         <li role="presentation" routerLinkActive="active">
-          <a [routerLink]="['/userFrom']">UserForm</a>
+          <a [routerLink]="['/userForm']">UserForm</a>
         </li>
       </ul>
     </div>
