--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
         <li role="presentation" routerLinkActive="active">
           <a [routerLink]="['/userForm']">UserForm</a>
         </li>
+        <li role="presentation" routerLinkActive="active">
+          <a [routerLink]="['/reactiveForm']">ReactiveForm</a>
+        </li>
       </ul>
     </div>
   </div>
