3 files modified, 4 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
         <li role="presentation" routerLinkActive="active">
           <a [routerLink]="['/reactiveForm']">ReactiveForm</a>
         </li>
+        <li role="presentation" routerLinkActive="active">
+          <a [routerLink]="['/myPipes']">MyPipes</a>
+        </li>
       </ul>
     </div>
   </div>
