3 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         <li role="presentation" routerLinkActive="active">
           <a [routerLink]="['/users']">Users</a>
         </li>
-        <li role="presentation" routerLinkActive="active">
+        <!-- <li role="presentation" routerLinkActive="active">
           <a [routerLink]="['/userForm']">UserForm</a>
         </li>
         <li role="presentation" routerLinkActive="active">
@@ -26,6 +26,9 @@
         </li>
         <li role="presentation" routerLinkActive="active">
           <a [routerLink]="['/myPipes']">MyPipes</a>
+        </li> -->
+        <li role="presentation" routerLinkActive="active">
+          <a [routerLink]="['/post']">Post Request</a>
         </li>
       </ul>
     </div>
