3 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,9 @@
         <li role="presentation" routerLinkActive="active">
           <a [routerLink]="['/post']">Post Request</a>
         </li>
+        <li role="presentation" routerLinkActive="active">
+          <a [routerLink]="['/auth']">Authentication</a>
+        </li>
       </ul>
     </div>
   </div>
