--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <p>I am Home</p>
-<!-- <p>Welcome to our app</p>
-<p>Hello world!!!</p>
+<p>Welcome to our app</p>
+<!-- <p>Hello world!!!</p>
 <p>Angular App</p>
-<p>Namaste</p> -->
-<p>Angular</p>
+<p>Namaste</p>
+<p>Angular</p> -->
